--- a/Sudoku.html
+++ b/Sudoku.html
@@ -5,19 +5,19 @@
     <link href="Sudoku.css" type="text/css" rel="stylesheet" />
     <script src="SudokuJava.js"></script>
     <script>
-        var sudokuArray = [[],[],[],[],[],[],[],[],[]];
 
         function submit() {
+            sudokuArray = [[],[],[],[],[],[],[],[],[]];
 
             for(var i = 0; i < 9; i++) {
                 for (var j = 0; j < 9; j++) {
-                    sudokuArray[i][j] = {value: document.getElementById((i + 1) + "," + (j + 1)).value, array:[0,0,0,0,0,0,0,0,0]};
+                    sudokuArray[i][j] = document.getElementById((i + 1) + "," + (j + 1)).value;
                 }
             }
             solve(sudokuArray);
             for(var i = 0; i < 9; i++) {
                 for (var j = 0; j < 9; j++) {
-                    document.getElementById((i + 1) + "," + (j + 1)).value = sudokuArray[i][j].value;
+                    document.getElementById((i + 1) + "," + (j + 1)).value = sudokuArray[i][j];
                 }
             }
 
@@ -33,139 +33,139 @@
 <div id="sudoku">
 <div class="square">
     <form>
-        <input id="1,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="1,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="1,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="1,1" type="input" maxlength="1" size="5px" value="6">
+        <input id="1,2" type="input" maxlength="1" size="5px" value="3">
+        <input id="1,3" type="input" maxlength="1" size="5px" value="2">
         <br>
-        <input id="2,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="2,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="2,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="2,1" type="input" maxlength="1" size="5px" value="4">
+        <input id="2,2" type="input" maxlength="1" size="5px" value="8">
+        <input id="2,3" type="input" maxlength="1" size="5px" value="7">
         <br>
-        <input id="3,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="3,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="3,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="3,1" type="input" maxlength="1" size="5px" value="5">
+        <input id="3,2" type="input" maxlength="1" size="5px" value="1">
+        <input id="3,3" type="input" maxlength="1" size="5px" value="9">
     </form>
 </div>
 <div class="square">
     <form>
-        <input id="1,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="1,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="1,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="1,4" type="input" maxlength="1" size="5px" value="7">
+        <input id="1,5" type="input" maxlength="1" size="5px" value="8">
+        <input id="1,6" type="input" maxlength="1" size="5px" value="1">
         <br>
-        <input id="2,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="2,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="2,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="2,4" type="input" maxlength="1" size="5px" value="5">
+        <input id="2,5" type="input" maxlength="1" size="5px" value="9">
+        <input id="2,6" type="input" maxlength="1" size="5px" value="6">
         <br>
-        <input id="3,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="3,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="3,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="3,4" type="input" maxlength="1" size="5px" value="2">
+        <input id="3,5" type="input" maxlength="1" size="5px" value="4">
+        <input id="3,6" type="input" maxlength="1" size="5px" value="3">
     </form>
 </div>
 <div class="squareEnd">
     <form>
-        <input id="1,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="1,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="1,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="1,7" type="input" maxlength="1" size="5px" value="9">
+        <input id="1,8" type="input" maxlength="1" size="5px" value="4">
+        <input id="1,9" type="input" maxlength="1" size="5px" value="5">
         <br>
-        <input id="2,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="2,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="2,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="2,7" type="input" maxlength="1" size="5px" value="2">
+        <input id="2,8" type="input" maxlength="1" size="5px" value="1">
+        <input id="2,9" type="input" maxlength="1" size="5px" value="3">
         <br>
-        <input id="3,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="3,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="3,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="3,7" type="input" maxlength="1" size="5px" value="8">
+        <input id="3,8" type="input" maxlength="1" size="5px" value="7">
+        <input id="3,9" type="input" maxlength="1" size="5px" value="6">
     </form>
 </div>
 <br>
 <div class="square">
     <form>
-        <input id="4,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="4,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="4,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="4,1" type="input" maxlength="1" size="5px" value="8">
+        <input id="4,2" type="input" maxlength="1" size="5px" value="6">
+        <input id="4,3" type="input" maxlength="1" size="5px" value="4">
         <br>
-        <input id="5,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="5,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="5,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="5,1" type="input" maxlength="1" size="5px" value="7">
+        <input id="5,2" type="input" maxlength="1" size="5px" value="5">
+        <input id="5,3" type="input" maxlength="1" size="5px" value="1">
         <br>
-        <input id="6,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="6,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="6,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="6,1" type="input" maxlength="1" size="5px" value="2">
+        <input id="6,2" type="input" maxlength="1" size="5px" value="9">
+        <input id="6,3" type="input" maxlength="1" size="5px" value="3">
     </form>
 </div>
 <div class="square">
     <form>
-        <input id="4,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="4,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="4,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="4,4" type="input" maxlength="1" size="5px" value="3">
+        <input id="4,5" type="input" maxlength="1" size="5px" value="5">
+        <input id="4,6" type="input" maxlength="1" size="5px" value="2">
         <br>
-        <input id="5,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="5,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="5,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="5,4" type="input" maxlength="1" size="5px" value="9">
+        <input id="5,5" type="input" maxlength="1" size="5px" value="6">
+        <input id="5,6" type="input" maxlength="1" size="5px" value="8">
         <br>
-        <input id="6,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="6,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="6,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="6,4" type="input" maxlength="1" size="5px" value="1">
+        <input id="6,5" type="input" maxlength="1" size="5px" value="7">
+        <input id="6,6" type="input" maxlength="1" size="5px" value="4">
     </form>
 </div>
 <div class="squareEnd">
     <form>
-        <input id="4,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="4,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="4,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="4,7" type="input" maxlength="1" size="5px" value="7">
+        <input id="4,8" type="input" maxlength="1" size="5px" value="9">
+        <input id="4,9" type="input" maxlength="1" size="5px" value="1">
         <br>
-        <input id="5,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="5,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="5,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="5,7" type="input" maxlength="1" size="5px" value="3">
+        <input id="5,8" type="input" maxlength="1" size="5px" value="2">
+        <input id="5,9" type="input" maxlength="1" size="5px" value="4">
         <br>
-        <input id="6,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="6,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="6,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="6,7" type="input" maxlength="1" size="5px" value="6">
+        <input id="6,8" type="input" maxlength="1" size="5px" value="5">
+        <input id="6,9" type="input" maxlength="1" size="5px" value="8">
     </form>
 </div>
 <br>
 <div class="square">
     <form>
-        <input id="7,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="7,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="7,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="7,1" type="input" maxlength="1" size="5px" value="9">
+        <input id="7,2" type="input" maxlength="1" size="5px" value="4">
+        <input id="7,3" type="input" maxlength="1" size="5px" value="5">
         <br>
-        <input id="8,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="8,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="8,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="8,1" type="input" maxlength="1" size="5px" value="1">
+        <input id="8,2" type="input" maxlength="1" size="5px" value="7">
+        <input id="8,3" type="input" maxlength="1" size="5px" value="6">
         <br>
-        <input id="9,1" type="input" maxlength="1" size="5px" value="0">
-        <input id="9,2" type="input" maxlength="1" size="5px" value="0">
-        <input id="9,3" type="input" maxlength="1" size="5px" value="0">
+        <input id="9,1" type="input" maxlength="1" size="5px" value="3">
+        <input id="9,2" type="input" maxlength="1" size="5px" value="2">
+        <input id="9,3" type="input" maxlength="1" size="5px" value="8">
     </form>
 </div>
 <div class="square">
     <form>
-        <input id="7,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="7,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="7,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="7,4" type="input" maxlength="1" size="5px" value="6">
+        <input id="7,5" type="input" maxlength="1" size="5px" value="3">
+        <input id="7,6" type="input" maxlength="1" size="5px" value="7">
         <br>
-        <input id="8,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="8,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="8,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="8,4" type="input" maxlength="1" size="5px" value="8">
+        <input id="8,5" type="input" maxlength="1" size="5px" value="2">
+        <input id="8,6" type="input" maxlength="1" size="5px" value="5">
         <br>
-        <input id="9,4" type="input" maxlength="1" size="5px" value="0">
-        <input id="9,5" type="input" maxlength="1" size="5px" value="0">
-        <input id="9,6" type="input" maxlength="1" size="5px" value="0">
+        <input id="9,4" type="input" maxlength="1" size="5px" value="4">
+        <input id="9,5" type="input" maxlength="1" size="5px" value="1">
+        <input id="9,6" type="input" maxlength="1" size="5px" value="9">
     </form>
 </div>
 <div class="squareEnd">
     <form>
-        <input id="7,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="7,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="7,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="7,7" type="input" maxlength="1" size="5px" value="1">
+        <input id="7,8" type="input" maxlength="1" size="5px" value="8">
+        <input id="7,9" type="input" maxlength="1" size="5px" value="2">
         <br>
-        <input id="8,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="8,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="8,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="8,7" type="input" maxlength="1" size="5px" value="4">
+        <input id="8,8" type="input" maxlength="1" size="5px" value="3">
+        <input id="8,9" type="input" maxlength="1" size="5px" value="9">
         <br>
-        <input id="9,7" type="input" maxlength="1" size="5px" value="0">
-        <input id="9,8" type="input" maxlength="1" size="5px" value="0">
-        <input id="9,9" type="input" maxlength="1" size="5px" value="0">
+        <input id="9,7" type="input" maxlength="1" size="5px" value="5">
+        <input id="9,8" type="input" maxlength="1" size="5px" value="6">
+        <input id="9,9" type="input" maxlength="1" size="5px" value="7">
     </form>
 </div>
 </div>
